[gd_scene load_steps=2 format=3 uid="uid://dtr2gfm1u8njj"]

[ext_resource type="Script" path="res://scripts/gui/multiplayer/client_menu.gd" id="1_ufhnv"]

[node name="ClientMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ufhnv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NomeInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Nome"
max_length = 10

[node name="IPInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "IP"
max_length = 13

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "8083"
placeholder_text = "Porta"
max_length = 4

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Entrar no servidor"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Voltar"

[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
